--- a/ui/src/app/views/project/show/workflow/blocs/workflow.list.blocs.html
+++ b/ui/src/app/views/project/show/workflow/blocs/workflow.list.blocs.html
@@ -12,41 +12,43 @@
                     </span>
                     <ng-container *ngIf="project.permissions.writable">
                       <span class="right"
-                            suiPopup
-                            #popup="suiPopup"
-                            [popupTemplate]="popupTemplate"
-                            popupTrigger="outsideClick"
-                            popupPlacement="bottom right">
-                        <i class="tag icon"></i>
+                            nz-popover
+                            [nzPopoverContent]="popupTemplate"
+                            nzPopoverTrigger="click"
+                            nzPopoverTitle="Labels"
+                            nzPopoverPlacement="rightTop">
+                        <i nz-icon nzType="tags" nzTheme="outline"></i>
                       </span>
                     </ng-container>
                 </div>
 
-            <ng-template let-popup #popupTemplate>
-                <div class="header">Labels</div>
-                <div class="content popup-label">
-                    <div class="ui fluid icon input">
-                        <input type="text" placeholder="Filter or create" [(ngModel)]="labelFilter" (keyup.enter)="confirmLabel(wf.name, labelFilter)">
-                        <i class="search icon"></i>
+            <ng-template #popupTemplate>
+                <div class="content">
+                    <div class="field">
+                        <nz-input-group [nzSuffix]="suffixIconSearch">
+                            <input nz-input type="text" placeholder="FIlter or create" [(ngModel)]="labelFilter"(keyup.enter)="confirmLabel(wf.name, labelFilter)">
+                        </nz-input-group>
+                        <ng-template #suffixIconSearch>
+                            <i nz-icon nzType="search"></i>
+                        </ng-template>
                     </div>
-                    <div class="ui celled relaxed list">
-                        <div class="item label-item"
-                             [class.pointing]="!workflowLabelsMap[wf.name][label.name]"
-                             [class.active]="workflowLabelsMap[wf.name][label.name]"
-                             *ngFor="let label of filteredLabels"
-                             (click)="!workflowLabelsMap[wf.name][label.name] && linkLabelToWorkflow(wf.name, label)">
-                            <i class="circle icon" [style.color]="label.color"></i>
+                    <nz-list nzSize="small">
+                        <nz-list-item *ngFor="let label of filteredLabels">
                             <div class="content">
-                                {{label.name}}
-                                <span class="pointing" *ngIf="workflowLabelsMap[wf.name][label.name]" (click)="unlinkLabelToWorkflow(wf.name, label)">
-                                      <i class="right floated close icon"></i>
-                                  </span>
+                                <span class="pointing" (click)="!workflowLabelsMap[wf.name][label.name] && linkLabelToWorkflow(wf.name, label)">
+                                    <i class="circle icon" [style.color]="label.color"></i>
+                                    {{label.name}}
+                                </span>
+
+                                <span class="pointing alignRight" *ngIf="workflowLabelsMap[wf.name][label.name]" (click)="unlinkLabelToWorkflow(wf.name, label)">
+                                    <i nz-icon nzType="close-circle" nzTheme="outline"></i>
+                                </span>
                             </div>
-                        </div>
-                    </div>
+                        </nz-list-item>
+                    </nz-list>
                 </div>
-                <div class="mt5">
-                    <a class="pointing" (click)="editLabels(); popup.close()"><i class="pencil icon"></i> Edit labels</a>
+                <div class="footer">
+                    <a class="pointing alignRight" (click)="editLabels()"><i nz-icon nzType="edit" nzTheme="outline"></i> Edit labels</a>
                 </div>
             </ng-template>
         </nz-col>
