--- a/ui/src/app/shared/keys/form/keys.form.scss
+++ b/ui/src/app/shared/keys/form/keys.form.scss
@@ -1,9 +1,3 @@
-.KeyForm {
-  .fields {
-    .field {
-      button {
-        margin-top: 23px;
-      }
-    }
-  }
+nz-row {
+  margin-top: 20px;
 }
