--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -11,6 +11,9 @@
 input[type=checkbox]:read-only {
   opacity: 0;
 }
+textarea:read-only {
+  color: rgba(255, 255, 255, 0.85);
+}
 
 .ant-spin-nested-loading>div>.ant-spin .ant-spin-text {
   text-shadow: none;
