--- a/ui/src/app/shared/keys/list/keys.list.html
+++ b/ui/src/app/shared/keys/list/keys.list.html
@@ -1,44 +1,36 @@
-<div class="keys" *ngIf="keys">
-    <table class="ui fixed celled table" *ngIf="getDataForCurrentPage().length > 0">
-        <thead>
-            <tr>
-                <th class="two wide">{{ 'keys_name' | translate }}</th>
-                <th class="two wide">{{ 'keys_type' | translate }}</th>
-                <th class="ten wide">{{ 'keys_public' | translate }}</th>
-                <th class="two wide" *ngIf="edit"></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let k of getDataForCurrentPage()">
-                <td>
-                    {{ k.name }}
-                </td>
-                <td>
-                    {{ k.type }}
-                </td>
-                <td>
-                    <pre>{{ k.public }}</pre>
-                </td>
-                <td *ngIf="edit">
-                    <app-delete-button [loading]="loading" (event)="deleteKey(k)"></app-delete-button>
-                </td>
-            </tr>
-        </tbody>
-        <tfoot *ngIf="getNbOfPages() > 1">
-            <tr>
-                <th colspan="4">
-                    <div class="ui right floated pagination menu">
-                        <a class="icon item" (click)="downPage()">
-                            <i class="left chevron icon"></i>
-                        </a>
-                        <a class="item" *ngFor="let page of getNbOfPages() | ngForNumber" (click)="goTopage(page)"
-                            [class.active]="currentPage === page">{{page}}</a>
-                        <a class="icon item" (click)="upPage()">
-                            <i class="right chevron icon"></i>
-                        </a>
-                    </div>
-                </th>
-            </tr>
-        </tfoot>
-    </table>
-</div>
+<nz-table [nzData]="keys" [nzNoResult]="nokeys" #keylist>
+    <thead>
+    <tr>
+        <th nzWidth="50px">Key name</th>
+        <th nzWidth="50px">Key type</th>
+        <th nzWidth="400px">Public key</th>
+        <th nzWidth="25px" *ngIf="edit"></th>
+    </tr>
+    </thead>
+    <tbody *ngFor="let k of keylist.data">
+    <tr>
+        <td>
+            {{ k.name }}
+        </td>
+        <td>
+            {{ k.type }}
+        </td>
+        <td nzBreakWord>
+            <ng-container *ngIf="k.type === 'ssh'">
+                <input nz-input readonly [ngModel]="k.public">
+            </ng-container>
+            <ng-container *ngIf="k.type === 'pgp'">
+                <textarea nz-input [ngModel]="k.public" readonly rows="29"></textarea>
+            </ng-container>
+
+        </td>
+        <td *ngIf="edit">
+            <button nz-button nzDanger nzType="primary" [nzLoading]="loading" nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this key ?"
+                    (nzOnConfirm)="deleteKey(k)">Delete</button>
+        </td>
+    </tr>
+    </tbody>
+</nz-table>
+<ng-template #nokeys>
+    <nz-alert nzType="info" nzMessage="There is no key"></nz-alert>
+</ng-template>
