--- a/ui/src/app/views/project/show/integrations/list/project.integration.list.html
+++ b/ui/src/app/views/project/show/integrations/list/project.integration.list.html
@@ -44,10 +44,13 @@
                     </nz-form-item>
                 </form>
             </td>
-            <td class="border">
+            <td>
                 <ng-container *ngIf="project.permissions.writable && !p.model.public">
-                    <app-delete-button [loading]="loading" [disabled]="loading" (event)="deleteIntegration(p)" *ngIf="!p.hasChanged"></app-delete-button>
-                    <button type="button" class="ui green button" *ngIf="p.hasChanged" (click)="updateIntegration(p)">{{ 'btn_save' | translate}}</button>
+                    <button *ngIf="!p.hasChanged" nz-button nzDanger nzType="primary" [nzLoading]="loading" [disabled]="loading"
+                        nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this integration ?" (nzOnConfirm)="deleteIntegration(p)">
+                        Delete
+                    </button>
+                    <button nz-button nzType="primary" type="button" *ngIf="p.hasChanged" [nzLoading]="loading" (click)="updateIntegration(p)">Save</button>
                 </ng-container>
             </td>
         </tr>
