refactor(ui): remove semantic from project.admin component

--- a/ui/src/app/views/project/show/admin/project.admin.scss
+++ b/ui/src/app/views/project/show/admin/project.admin.scss
@@ -1,21 +1,13 @@
-.repomanager {
-    margin-top: 50px;
-}
-
-.ui.grid {
-    .column {
-        .title {
-            font-size: 1.1rem;
-            font-weight: 600;
-        }
-    }
-}
-
-.ui.form .fields {
-    margin-bottom: 0px;
+nz-card {
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
 
 .proj-icon {
     height: 5em;
     width: 5em;
+}
+
+.alignRight {
+  text-align: right;
 }
