--- a/ui/src/app/views/project/show/admin/project.admin.html
+++ b/ui/src/app/views/project/show/admin/project.admin.html
@@ -1,88 +1,62 @@
 <div id="projectAdmin">
-    <app-zone header="{{ 'project_rename_title' | translate }}">
-        <app-zone-content class="bottom">
-            <form class="ui form" (ngSubmit)="onSubmitProjectUpdate()" #projectUpdateFrom="ngForm">
-                <div class="fields">
-                    <div class="seven wide field">
-                        <input type="text" name="formProjectUpdateName"
-                               placeholder="{{ 'project_name' | translate}}"
-                               [(ngModel)]="project.name"
-                               [disabled]="loading"
-                               required
-                               #formProjectUpdateName="ngModel">
-                        <div *ngIf="formProjectUpdateName.invalid && !formProjectUpdateName.pristine"
-                             class="ui error message">
-                            <p>{{'project_update_name_error' | translate}}</p>
-                        </div>
-                    </div>
-                    <div class="nine wide right aligned field">
-                        <button class="ui green button" name="btnrename" [class.loading]="loading" [disabled]="projectUpdateFrom.invalid">{{ 'btn_rename' | translate }}</button>
-                    </div>
-                </div>
-            </form>
-        </app-zone-content>
-    </app-zone>
-    <app-zone header="{{ 'project_description' | translate }}">
-        <app-zone-content class="bottom">
-            <form class="ui form" (ngSubmit)="onSubmitProjectUpdate()" #projectUpdateFrom="ngForm">
-                <div class="fields">
-                    <div class="fourteen wide field">
-                        <textarea name="formProjectUpdateDescription"
-                               placeholder="{{ 'project_description' | translate}}"
-                               [(ngModel)]="project.description"
-                               [disabled]="loading"
-                               #formProjectUpdateDescription="ngModel">
+    <nz-card nzTitle="Project configuration" >
+        <form nz-form (ngSubmit)="onSubmitProjectUpdate()" #projectUpdateFrom="ngForm">
+            <nz-form-item>
+                <nz-form-label [nzSpan]="3">Project name</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="text" name="formProjectUpdateName"
+                           placeholder="Project name"
+                           [(ngModel)]="project.name"
+                           [disabled]="loading"
+                           required
+                           #formProjectUpdateName="ngModel">
+                </nz-form-control>
+                <nz-alert *ngIf="formProjectUpdateName.invalid && !formProjectUpdateName.pristine"
+                          nzType="error" nzMessage="Project name is mandatory and must respect the alphanumeric pattern ([a-zA-Z0-9]*)"></nz-alert>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-label [nzSpan]="3">Description</nz-form-label>
+                <nz-form-control>
+                        <textarea nz-input name="formProjectUpdateDescription"
+                                  placeholder="Description"
+                                  [(ngModel)]="project.description"
+                                  [disabled]="loading"
+                                  #formProjectUpdateDescription="ngModel">
                         </textarea>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item>
+                <nz-form-label [nzSpan]="3">Icon</nz-form-label>
+                <nz-form-control>
+                    <div>
+                        <img class="proj-icon" [src]="project.icon" alt="project icon" *ngIf="project.icon">
                     </div>
-                    <div class="two wide right aligned field">
-                        <button class="ui green button" name="btnrename" [class.loading]="loading" [disabled]="projectUpdateFrom.invalid">{{ 'btn_save' | translate }}</button>
-                    </div>
-                </div>
-            </form>
-        </app-zone-content>
-    </app-zone>
-    <app-zone header="{{ 'project_icon' | translate }}">
-        <app-zone-content class="bottom">
-            <form class="ui form">
-                <div class="fields">
-                    <div class="fourteen wide field center aligned" *ngIf="!fileTooLarge">
-                        <div>
-                            <img class="proj-icon" [src]="project.icon" alt="project icon" *ngIf="project.icon">
-                        </div>
-                        <app-upload-button accept=".png,.jpg,.jpeg" image="true" (event)="fileEvent($event)">
-                        </app-upload-button>
-                    </div>
-                    <div class="ui fourteen wide red message field center aligned" *ngIf="fileTooLarge" [textContent]="'common_file_too_large' | translate"></div>
-                    <div class="two wide right aligned field">
-                        <button class="ui green button" [class.loading]="loading" name="updateiconButton" (click)="onSubmitProjectUpdate()" [disabled]="loading">{{ 'btn_save' | translate }}
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </app-zone-content>
-    </app-zone>
-    <app-zone>
-        <h4 class="ui top attached segment">
-            {{ 'project_repoman_title' | translate }}
-        </h4>
-        <app-zone-content class="bottom">
-            <app-repomanager-form [project]="project"></app-repomanager-form>
-            <app-project-repomanager-list *ngIf="project.vcs_servers && project.vcs_servers.length > 0"
-                                          [project]="project" [reposmanagers]="project.vcs_servers"
-            ></app-project-repomanager-list>
-        </app-zone-content>
-    </app-zone>
-    <app-zone header="{{ 'danger_zone' | translate }}" headerClass="red inverted">
-        <app-zone-content class="bottom">
-            <div class="ui grid">
-                <div class="eight wide column">
-                    <div class="title">{{ 'project_delete_label' | translate}}</div>
-                    <div class="description">{{ 'project_delete_description' | translate}}</div>
-                </div>
-                <div class="eight wide right aligned column">
-                    <app-delete-button [loading]="loading" (event)="deleteProject()"></app-delete-button>
-                </div>
-            </div>
-        </app-zone-content>
-    </app-zone>
+                    <app-upload-button accept=".png,.jpg,.jpeg" image="true" (event)="fileEvent($event)"></app-upload-button>
+                    <nz-alert *ngIf="fileTooLarge" nzType="error" nzMessage="Your file is too large (max 100Ko)"></nz-alert>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nzJustify="end">
+                <button nz-button nzType="primary" name="btnrename" [nzLoading]="loading" [disabled]="projectUpdateFrom.invalid">Rename</button>
+            </nz-form-item>
+        </form>
+    </nz-card>
+    <nz-card nzTitle="Link to a repository manager">
+        <app-repomanager-form [project]="project"></app-repomanager-form>
+        <app-project-repomanager-list *ngIf="project.vcs_servers && project.vcs_servers.length > 0"
+                                      [project]="project" [reposmanagers]="project.vcs_servers"
+        ></app-project-repomanager-list>
+    </nz-card>
+    <nz-card nzTitle="Danger zone">
+        <nz-row>
+            <nz-col [nzSpan]="12">
+                <div class="title">Delete project</div>
+                <div class="description">Once you delete a project, there is no going back. Please be certain.</div>
+            </nz-col>
+            <nz-col [nzSpan]="12" class="alignRight">
+                <button nz-button nzDanger nzType="primary" [nzLoading]="loading"
+                    nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this project ?"
+                    (nzOnConfirm)="deleteProject()">Delete</button>
+            </nz-col>
+        </nz-row>
+    </nz-card>
 </div>
