--- a/ui/src/app/views/project/show/integrations/list/project.integration.list.html
+++ b/ui/src/app/views/project/show/integrations/list/project.integration.list.html
@@ -1,75 +1,62 @@
 <div class="ProjectIntegrationList">
-    <table class="ui fixed celled table" *ngIf="getDataForCurrentPage().length > 0">
+    <nz-table [nzData]="this.project.integrations" [nzNoResult]="nointeg" #integList>
         <thead>
         <tr>
-            <th class="four wide">{{ 'integration_name' | translate }}</th>
-            <th class="four wide">{{ 'integration_model' | translate }}</th>
-            <th class="six wide">{{ 'integration_configuration' | translate }}</th>
-            <th class="two wide"></th>
+            <th nzWidth="100px">Name</th>
+            <th nzWidth="100px">Model</th>
+            <th nzWidth="300px">Configuration</th>
+            <th nzWidth="25px"></th>
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let p of getDataForCurrentPage()">
-            <td class="border">
+        <tr *ngFor="let p of integList.data">
+            <td>
                 {{ p.name }}
                 <span *ngIf="p.model.public" nz-tooltip nzTooltipTitle="Public integration" nzTooltipPlacement="top"> <i class="check circle outline icon large green"></i> </span>
             </td>
-            <td class="border">
+            <td>
                 {{ p.model.name}}
             </td>
-            <td class="border">
-                <div class="ui form">
-                    <div class="inline fields" *ngFor="let k of p.config | keys">
-                        <div class="six wide field">
-                            <label>
-                                <b>{{k}}</b>
-                                <span *ngIf="p.config[k].description" suiPopup [popupText]="p.config[k].description" popupPlacement="right center">
-                                    <i class="info circle icon"></i>
-                                </span>
-                            </label>
-                        </div>
-                        <div class="ten wide field">
+            <td>
+                <form nz-form>
+                    <nz-form-item *ngFor="let k of p.config | keys">
+                        <nz-form-label [nzSpan]="12">
+                            {{k}}
+                            <span *ngIf="p.config[k].description" nz-tooltip
+                                  [nzTooltipTitle]="p.config[k].description" nzTooltipPlacement="right">
+                                    <i nz-icon nzType="info-circle" nzTheme="outline"></i>
+                             </span>
+                        </nz-form-label>
+                        <nz-form-control>
                             <ng-container *ngIf="p.config[k].static">
-                                <input type="text" *ngIf="p.config[k].type !== 'password'" [(ngModel)]="p.config[k].value" readonly>
-                                <input type="password" *ngIf="p.config[k].type === 'password'" [(ngModel)]="p.config[k].value" readonly>
+                                <input nz-input type="text" name="{{k}}-value" *ngIf="p.config[k].type !== 'password'" [(ngModel)]="p.config[k].value" readonly>
+                                <input nz-input type="password" name="{{k}}-value" *ngIf="p.config[k].type === 'password'" [(ngModel)]="p.config[k].value" readonly>
                             </ng-container>
                             <ng-container *ngIf="!p.config[k].static">
-                                <input type="checkbox" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'boolean'" (keydown)="p.hasChanged = true" [readonly]="p.model.public"/>
-                                <input type="text" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'string'" (keydown)="p.hasChanged = true" [readonly]="p.model.public">
+                                <input type="checkbox" name="{{k}}-value" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'boolean'" (keydown)="p.hasChanged = true" [readonly]="p.model.public"/>
+                                <input nz-input type="text" name="{{k}}-value" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'string'" (keydown)="p.hasChanged = true" [readonly]="p.model.public">
                                 <ng-container *ngIf="p.config[k].type === 'text'">
-                                    <codemirror [(ngModel)]="p.config[k].value" [config]="codeMirrorConfig" #codeMirror (keydown)="p.hasChanged = true"></codemirror>
+                                    <codemirror name="{{k}}-value" [(ngModel)]="p.config[k].value" [config]="codeMirrorConfig" #codeMirror (keydown)="p.hasChanged = true"></codemirror>
                                 </ng-container>
-                                <input type="password" name="integrationpassword" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'password'" (keydown)="p.hasChanged = true">
+                                <input nz-input type="password" name="{{k}}-value" [(ngModel)]="p.config[k].value" *ngIf="p.config[k].type === 'password'" (keydown)="p.hasChanged = true">
                             </ng-container>
-                        </div>
-                    </div>
-                </div>
+                        </nz-form-control>
+                    </nz-form-item>
+                </form>
             </td>
-            <td class="border">
+            <td>
                 <ng-container *ngIf="project.permissions.writable && !p.model.public">
-                    <app-delete-button [loading]="loading" [disabled]="loading" (event)="deleteIntegration(p)" *ngIf="!p.hasChanged"></app-delete-button>
-                    <button type="button" class="ui green button" *ngIf="p.hasChanged" (click)="updateIntegration(p)">{{ 'btn_save' | translate}}</button>
+                    <button *ngIf="!p.hasChanged" nz-button nzDanger nzType="primary" [nzLoading]="loading" [disabled]="loading"
+                        nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this integration ?" (nzOnConfirm)="deleteIntegration(p)">
+                        Delete
+                    </button>
+                    <button nz-button nzType="primary" type="button" *ngIf="p.hasChanged" [nzLoading]="loading" (click)="updateIntegration(p)">Save</button>
                 </ng-container>
             </td>
         </tr>
         </tbody>
-        <tfoot *ngIf="getNbOfPages() > 1">
-        <tr>
-            <th colspan="4">
-                <div class="ui right floated pagination menu" >
-                    <a class="icon item" (click)="downPage()">
-                        <i class="left chevron icon"></i>
-                    </a>
-                    <a class="item" *ngFor="let page of getNbOfPages() | ngForNumber" (click)="goTopage(page)" [class.active]="currentPage === page">{{page}}</a>
-                    <a class="icon item" (click)="upPage()">
-                        <i class="right chevron icon"></i>
-                    </a>
-                </div>
-            </th>
-        </tr>
-        </tfoot>
-    </table>
-    <div class="ui info message" *ngIf="getDataForCurrentPage().length === 0">
-        {{ 'integration_no' | translate }}
-    </div>
+    </nz-table>
+    <ng-template #nointeg>
+        <nz-alert nzType="info" nzMessage="There is no integration"></nz-alert>
+    </ng-template>
 </div>
