--- a/ui/src/app/views/environment/show/advanced/environment.advanced.html
+++ b/ui/src/app/views/environment/show/advanced/environment.advanced.html
@@ -1,43 +1,40 @@
 <div id="EnvironmentAdmin">
-    <app-zone header="{{ 'environment_rename_title' | translate }}">
-        <app-zone-content class="bottom">
-            <form class="ui form" #environmentUpdateFrom="ngForm">
-                <div class="fields">
-                    <div class="eight wide field">
-                        <input type="text" name="formEnvironmentUpdateName" [(ngModel)]="environment.name" required
-                            #formEnvironmentUpdateName="ngModel" pattern="[a-zA-Z0-9._-]*" [disabled]="loading">
-                        <div *ngIf="formEnvironmentUpdateName.invalid && !formEnvironmentUpdateName.pristine"
-                            class="ui error message">
-                            <p>{{'environment_name_error' | translate}}</p>
-                        </div>
-                    </div>
-                    <div class="eight wide right aligned field">
-                        <button (click)="cloneModalVisible = true" type="button" name="clonebtn" class="ui blue button"
-                            [class.loading]="loading" [class.disabled]="loading"><i
-                                class="copy icon"></i>{{'common_clone' | translate}}
-                        </button>
-                        <button class="ui green button" [class.loading]="loading" name="updateNameButton"
-                            (click)="onSubmitEnvironmentUpdate()"
-                            [disabled]="environmentUpdateFrom.invalid || environment.from_repository">{{ 'btn_rename' | translate }}
-                        </button>
-                    </div>
-                </div>
-            </form>
-        </app-zone-content>
-    </app-zone>
-    <app-zone header="{{ 'danger_zone' | translate }}" headerClass="red inverted">
-        <app-zone-content class="bottom">
-            <div class="ui grid">
-                <div class="eight wide column">
-                    <div class="title">{{ 'environment_delete_label' | translate}}</div>
-                    <div class="description">{{ 'environment_delete_description' | translate}}</div>
-                </div>
-                <div class="eight wide right aligned column">
-                    <app-delete-button [loading]="loading" (event)="deleteEnvironment()"></app-delete-button>
-                </div>
-            </div>
-        </app-zone-content>
-    </app-zone>
+    <nz-card nzTitle="Configuration">
+        <form nz-form #environmentUpdateFrom="ngForm">
+            <nz-form-item>
+                <nz-form-label>Name</nz-form-label>
+                <nz-form-control>
+                    <input nz-input type="text" name="formEnvironmentUpdateName" [(ngModel)]="environment.name" required
+                           #formEnvironmentUpdateName="ngModel" pattern="[a-zA-Z0-9._-]*" [disabled]="loading">
+                    <nz-alert nzType="error" *ngIf="formEnvironmentUpdateName.invalid && !formEnvironmentUpdateName.pristine">
+                        <p>{{'environment_name_error' | translate}}</p>
+                    </nz-alert>
+                </nz-form-control>
+            </nz-form-item>
+            <nz-form-item nzJustify="end">
+                <button nz-button nzType="primary" (click)="cloneModalVisible = true" type="button" name="clonebtn"
+                        [nzLoading]="loading" [disabled]="loading"><i
+                        class="copy icon"></i>Clone
+                </button>
+                <button nz-button nzType="primary" [nzLoading]="loading" name="updateNameButton"
+                        (click)="onSubmitEnvironmentUpdate()"
+                        [disabled]="environmentUpdateFrom.invalid || environment.from_repository">Rename
+                </button>
+            </nz-form-item>
+        </form>
+    </nz-card>
+    <nz-card nzTitle="Danger zone">
+        <nz-row>
+            <nz-col [nzSpan]="12">
+                <div class="title">{{ 'environment_delete_label' | translate}}</div>
+                <div class="description">{{ 'environment_delete_description' | translate}}</div>
+            </nz-col>
+            <nz-col [nzSpan]="12" class="alignRight">
+                <button nz-button nzDanger nzType="primary" [nzLoading]="loading"
+                        nz-popconfirm (nzOnConfirm)="deleteEnvironment()" nzPopconfirmTitle="Are you sure you want to delete this environment ?">Delete</button>
+            </nz-col>
+        </nz-row>
+    </nz-card>
     <nz-modal nzTitle="{{'environment_title_clone' | translate}} '{{environment.name}}'" [nzVisible]="cloneModalVisible">
         <div *nzModalContent>
             <form nz-form>
